--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
             target="_blank" rel="noreferrer noopener">Click to view</a>
           </li>
         </ul>
+        <div>
+          <h1 class="movey">QUALITIES</h1>
+          <P>TEAM PLAYER</P>
+          <i class="fas fa-people-carry"></i>
+        </div>
       </div>
       <div id="contact" class="space">
         <h1 class="movey">CONTACT ME</h1>
@@ -73,16 +78,21 @@
         <div class="grid-container">
           <img src="/moments/M1.jpeg" class="m" >
           <img src="/moments/M2.jpeg" class="m" >
-          <img src="/moments/M3.jpeg" class="m" >
+          <img src="/moments/M3.jpeg" class="m" class="span">
           <img src="/moments/M4.jpeg" class="m" >
           <img src="/moments/M5.jpeg" class="m" >
-          <img src="/moments/M6.jpeg" class="m" >
+          <img src="/moments/M6.jpeg" class="m" class="span">
           <img src="/moments/M7.jpeg" class="m" >
-          <img src="/moments/M8.jpeg" class="m" >
+          <img src="/moments/M8.jpeg" class="m" class="span">
           <img src="/moments/M9.jpeg" class="m" >
           <img src="/moments/M10.jpeg" class="m" >
-          <img src="/moments/M11.jpeg" class="m" >
+          <img src="/moments/M11.jpeg" class="m" class="span">
           <img src="/moments/M12.jpeg" class="m" >
+          <img src="/moments/M13.jpeg" class="m" >
+          <img src="/moments/M14.jpeg" class="m" >
+          <img src="/moments/M15.jpeg" class="m" >
+          <img src="/moments/M16.jpeg" class="m" >
+          <!-- <img src="/moments/M17.jpeg" class="m" > -->
           
         </div>
       </div>
