--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         <img src="/media/mariam.jpg" id="inform">
         <h1>AFOLABI, Opeyemi Mariam</h1>
         <h3>Front-end Web Developer</h3>
+        <h3>Front-end Web Developer</h3>
+        <h3>Front-end Web Developer</h3>
     </header>
     <input type="button" id="top-stick" value="TOP"><a href="#home"></a>
     <section>
