--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
         <div >
           <h1>AFOLABI, Opeyemi Mariam</h1>
           <h3>Front-end Web Developer</h3>
-          <input type="button" class="project-linky" value="PROJECT" id="project-view">
-          <input type="button" class="project-linky" value="BLOG" id="blog-view">
+          <a href="https://app.netlify.com/teams/opeyemi-afolabi45/" target="_blank" rel="noopener noreferrer">
+            <input type="button" class="project-linky" value="PROJECT" id="project-view"></a> 
+
+          <a href="https://hashnode.com/@DevMariam" target="_blank" rel="noopener noreferrer">
+          <input type="button" class="project-linky" value="BLOG" id="blog-view"></a>
         </div>
     </header>
     <input type="button" id="top-stick" value="TOP"><a href="#home"></a>
@@ -130,17 +133,17 @@
           <div class="projectbox">
             <img src="/media/fylo.jpeg">
             <a href="https://opeyemi-fylo-project.netlify.app/" target="_blank" rel="noopener noreferrer">
-              <input type="button" class="adjust"></a> 
+              <input type="button" class="adjust" value="CLICK ME"></a> 
           </div>
           <div class="projectbox">
             <img src="/media/counter.jpeg">
             <a href="https://opeyemi-javascriptcounter-project.netlify.app/" target="_blank" rel="noopener noreferrer">
-              <input type="button" class="adjust"></a>
+              <input type="button" class="adjust" value="CLICK ME"></a>
           </div>
           <div class="projectbox">
             <img src="/media/vancouver.jpeg">
             <a href="https://mariam-vancouver-cleaning.netlify.app/" target="_blank" rel="noopener noreferrer">
-              <input type="button" class="adjust"></a>
+              <input type="button" class="adjust" value="CLICK ME"></a>
           </div>  
         </div>
 
