--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
       integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="stylesheet.css" />
+    <!-- <link rel="stylesheet" href="port.css" /> -->
   </head>
+   <!-- <div id="contact" class="space">
+        <h1 class="movey">CONTACT ME</h1>
+        <p>
+          PHONE NUMBER: +234 906 598 4246<br />
+          EMAIL: opeyemi.afolabi45@gmail.com<br />
+        </p>
+        <form>
+                Name: <input type="text"> <br>
+                <i class="fas fa-envelope-square"></i> <input type= "email" required placeholder="Enter an Email"><br>
+                Message: <textarea name= "message" input type= "text"></textarea><br><br>
+                <input type= "Submit" value="Contact">
+        </form>
+      </div> -->
   <body>
     
     <div class="topnav">
